feat(all): First commit since I nuked the .git folder
Im too dumb

Signed-off-by: Pablo <pablohuggem@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [package]
 name = "greenriver"
+description = "A command line tool to work with greenfield images"
+homepage = "https://github.com/Tomcat-42/greenriver"
+repository = "https://github.com/Tomcat-42/greenriver"
+readme = "Readme.md"
+documentation = "https://docs.rs/greenriver"
 version = "0.1.0"
 edition = "2021"
 
